--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,32 +1,69 @@
-.main {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #1f2430;
-    color: #cc4949;
-    font-family: "montserrat";
-    font-size: 50px;
+/* Update your CSS (home.css) */
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+  background-color: #1f2430;
+  color: #cc4949;
+  font-family: "montserrat";
+  font-size: 50px;
+  position: relative;
+  z-index: 0;
+}
+
+.ImageAnimation {
+  width: 100px;
+  height: auto;
+  animation: floatAndSpin 1.7s ease-in-out forwards, fadeIn 1s forwards;
+  opacity: 0;
+  margin-top: 10px; 
+}
+
+/* Add media query for mobile devices */
+@media only screen and (max-width: 768px) {
+  .App {
+    flex-direction: column;
+    align-items: center; 
+    padding: none;
   }
 
-/* Animation for the floating and spinning image */
-.ImageAnimation {
-    position: absolute;
-    bottom: 0;
+  .ImageAnimation {
     width: 100px;
     height: auto;
-    animation: floatAndSpin 2s ease-in-out forwards;
+    animation: floatAndSpinMobile 1.7s ease-in-out forwards, fadeIn 1s forwards;
+    opacity: 0;
+    margin-top: 0px;
   }
-  
-  @keyframes floatAndSpin {
-    0% {
-      transform: translateY(50vh) rotate(0deg);
-    }
-    50% {
-      transform: translateY(-30vh) rotate(180deg);
-    }
-    100% {
-      transform: translateY(-25vh) rotate(360deg);
-    }
+}
+
+@keyframes floatAndSpin {
+  0% {
+    transform: translateY(50vh) rotate(0deg);
   }
+  50% {
+    transform: translateY(-20vh) rotate(180deg);
+  }
+  100% {
+    transform: translateY(0) rotate(360deg);
+  }
+}
+
+@keyframes floatAndSpinMobile {
+  0% {
+    transform: translateY(50vh) rotate(0deg);
+  }
+  50% {
+    transform: translateY(-20vh) rotate(180deg);
+  }
+  100% {
+    transform: translateY(-3vh) rotate(360deg);
+  }
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
