--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,90 +1,140 @@
 @import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap");
 
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
-	font-family: "Titillium Web", sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Titillium Web", sans-serif;
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 :root {
-	--mainColor: #1f2430;
-	--mainColorLight: #5767aa;
-	--secondaryColor: #eee;
-	--textColor: #cc4949;
+  --mainColorLight: #fafaeb;
+  --mainColorDark: #1f2430;
+  --secondaryColor: #eee;
+  --textColorLight: #cc4949;
+  --textColorDark: #fff;
+}
+
+body {
+  margin: 0;
+}
+
+.light {
+  background-color: var(--mainColorLight);
+  color: var(--textColorLight);
+}
+
+.dark {
+  background-color: var(--mainColorDark);
+  color: var(--textColorDark);
 }
 
 header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	height: 80px;
-	padding: 0 2rem;
-	background-color: var(--mainColor);
-	color: var(--textColor);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  padding: 0 2rem;
+}
+
+.light header {
+  background-color: var(--mainColorLight);
+  color: var(--textColorLight);
+}
+
+.dark header {
+  background-color: var(--mainColorDark);
+  color: var(--textColorDark);
 }
 
 nav a {
-	margin: 0 1rem;
-	color: var(--textColor);
-	text-decoration: none;
+  margin: 0 1rem;
+  color: var(--textColorLight);
+  text-decoration: none;
 }
 
 nav a:hover {
-	color: var(--secondaryColor);
+  color: var(--secondaryColor);
 }
 
 header .nav-btn {
-	padding: 5px;
-	cursor: pointer;
-	background: transparent;
-	border: none;
-	outline: none;
-	color: var(--textColor);
-	visibility: hidden;
-	opacity: 0;
-	font-size: 1.8rem;
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: var(--textColorLight);
+  visibility: hidden;
+  opacity: 0;
+  font-size: 1.8rem;
+}
+
+.dark header .nav-btn {
+  color: var(--textColorLight);
 }
 
 header div,
 nav {
-	display: flex;
-	align-items: center;
-	z-index: 1;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+}
+
+.custom-button {
+  background-color: var(--mainColorLight);
+  color: #fafaeb;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.5s ease, color 0.5s ease;
+}
+
+.custom-button:hover {
+  background-color: #cc4949;
 }
 
 @media only screen and (max-width: 1024px) {
-	header .nav-btn {
-		visibility: visible;
-		opacity: 1;
-	}
+  header .nav-btn {
+    visibility: visible;
+    opacity: 1;
+  }
 
-	header nav {
-		position: fixed;
-		top: -100vh;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		gap: 1.5rem;
-		background-color: var(--mainColor);
-		transition: 1s;
-	}
+  header nav {
+    position: fixed;
+    top: -100vh;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    transition: 1s;
+  }
 
-	header .responsive_nav {
-		transform: translateY(100vh);
-	}
+  header.dark nav {
+    background-color: var(--mainColorDark);
+  }
 
-	nav .nav-close-btn {
-		position: absolute;
-		top: 2rem;
-		right: 2rem;
-	}
+  header .responsive_nav {
+    transform: translateY(100vh);
+  }
 
-	nav a {
-		font-size: 1.5rem;
-	}
+  nav .nav-close-btn {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+  }
+
+  nav a {
+    font-size: 1.5rem;
+    color: var(--textColorLight);
+  }
+
+  header.dark nav a {
+    color: var(--textColorLight);
+  }
 }
