--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -6,6 +6,7 @@
     color: #cc4949;
     font-family: "Titillium Web", sans-serif;
     font-size: 50px;
+    margin-top: -5rem;
   }
   
   .ImageAnimation {
