--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,27 +1,54 @@
-.App {
+.main {
+    margin-top: -5rem;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     color: #cc4949;
     font-family: "Titillium Web", sans-serif;
     font-size: 50px;
   }
+
+  .round-image-container {
+    overflow: hidden;
+    border-radius: 50%;
+    width: 20px; /* Adjust the width as needed */
+    height: 20px; /* Adjust the height as needed */
+    margin: 0 auto; /* Center the image within the container */
+}
+
+.round-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Maintain aspect ratio and cover the container */
+}
   
-  .ImageAnimation {
-    width: 100px;
-    height: auto;
-    animation: floatAndSpin 1.7s ease-in-out forwards, fadeIn 1s forwards;
-    opacity: 0;
-    margin-top: 10px; 
+  .col-md-6 {
+    padding: 5rem;
+    justify-content: center;
+  }
+  
+  .row-1 {
+    display: flex;
+    align-items: center;
+    margin-top: 3rem;
   }
   
   @media only screen and (max-width: 768px) {
     .App {
-      flex-direction: column;
-      align-items: center; 
-      padding: none;
+      align-items: center;
+      content: center;
     }
-  }
 
+    .row-1 {
+        flex-direction: column;
+        justify-content: center;
+        padding-top: 2rem;   }
+
+ 
+    .col-md-6 {
+        padding-top: 2rem;
+      }
+  }
   
