--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,54 +1,97 @@
 .main {
-    margin-top: -5rem;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #cc4949;
-    font-family: "Titillium Web", sans-serif;
-    font-size: 50px;
-  }
+  display: flex;
+  height: 100vh; 
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #cc4949;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 50px;
+}
 
-  .round-image-container {
-    overflow: hidden;
-    border-radius: 50%;
-    width: 20px; /* Adjust the width as needed */
-    height: 20px; /* Adjust the height as needed */
-    margin: 0 auto; /* Center the image within the container */
+.round-image-container {
+  overflow: hidden;
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
+  margin: 0 auto;
 }
 
 .round-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* Maintain aspect ratio and cover the container */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center top;
 }
-  
-  .col-md-6 {
-    padding: 5rem;
-    justify-content: center;
-  }
-  
-  .row-1 {
-    display: flex;
-    align-items: center;
-    margin-top: 3rem;
-  }
-  
-  @media only screen and (max-width: 768px) {
-    .App {
+
+.col-md-6 {
+  padding: 4rem;
+  justify-content: center;
+}
+
+.row-1 {
+  display: flex;
+  align-items: center;
+  margin-top: 0rem;
+}
+
+
+.row-2 {
+  display: flex;
+  align-items: center;
+  margin-top: 0rem;
+}
+
+.row-3 {
+  display: flex;
+  align-items: center;
+  margin-top: 6rem;
+  width: auto;
+}
+
+.image {
+  width: 400px;
+  height: auto;
+  margin-top: 10px; 
+  margin: auto;
+}
+
+.custom-button {
+  background-color: var(--mainColorLight);
+  color: #fafaeb;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.row-3 h2 {
+  border-bottom: 5px solid #cc4949;
+}
+
+@media only screen and (max-width: 768px) {
+  .App {
       align-items: center;
       content: center;
-    }
-
-    .row-1 {
-        flex-direction: column;
-        justify-content: center;
-        padding-top: 2rem;   }
-
- 
-    .col-md-6 {
-        padding-top: 2rem;
-      }
   }
-  
+
+  .main {
+    min-height: 100vh;
+  }
+
+  .row-1, .row-2, .row-3 {
+      flex-direction: column;
+      justify-content: center;
+      padding-top: 2rem;
+  }
+
+  .col-md-6 {
+      padding-top: 2rem;
+  }
+
+  .round-image-container {
+      width: 150px;
+      height: 150px;
+  }
+}
